# knou-ebook-pdf-converter

./: .gitignore  README.ko.md  README.md  main.py  pyproject.toml  specification.md
src/: browser.py  ebook_parser.py  ebook_service.py  images_to_pdf_service.py  ocr.py  ocr_service.py
tests/: test_browser.py  test_ebook_parser.py  test_ebook_service.py
