[project]
name = "knou-ebook-pdf-converter"
version = "0.1.0"
description = "Convert knou ebooks into searchable pdfs"
readme = "README.md"
requires-python = ">=3.10.2"
dependencies = [
    "easyocr>=1.7.2",
    "mypy>=1.15.0",
    "playwright>=1.50.0",
    "pytest-asyncio>=0.25.3",
    "pytest-mock>=3.14.0",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10.2"
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true
warn_unused_configs = true

[dependency-groups]
dev = [
    "pytest-asyncio>=0.25.3",
]
