[project]
name = "knou-ebook-pdf-converter"
version = "0.1.0"
description = "Convert knou ebooks into searchable pdfs"
readme = "README.md"
requires-python = ">=3.10.2"
dependencies = [
    "easyocr>=1.7.2",
    "fpdf>=1.7.2",
    "img2pdf>=0.6.0",
    "mypy>=1.15.0",
    "ocrmypdf>=16.9.0",
    "ocrmypdf-easyocr",
    "pillow>=11.1.0",
    "playwright>=1.50.0",
    "pytest-asyncio>=0.25.3",
    "pytest-mock>=3.14.0",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10.2"
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true
warn_unused_configs = true

[tool.uv.sources]
ocrmypdf-easyocr = { git = "https://github.com/ocrmypdf/OCRmyPDF-EasyOCR.git" }

[dependency-groups]
dev = [
    "pytest-asyncio>=0.25.3",
]
